fix for Gatsby at least (add overflow to html doc too)

--- a/packages/react/src/components/dialog/Dialog.module.scss
+++ b/packages/react/src/components/dialog/Dialog.module.scss
@@ -3,26 +3,24 @@
 @value medium-up from "../../styles/breakpoints.css";
 
 .dialogVisibleBodyWithHiddenScrollbars {
-  touch-action: none;
-  -webkit-overflow-scrolling: none;
-  overflow: hidden !important;
-  overscroll-behavior: none;
+    overflow: hidden;
 }
 
 .dialogContainer {
   --accent-line-color: var(--color-bus);
   --overlay-color: rgba(0, 0, 0, 0.3);
-
+  -webkit-overflow-scrolling: touch;
   align-items: center;
+  bottom: 0;
   display: flex;
-  height: 100%;
   justify-content: center;
   left: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 800;
   overflow: auto;
+  overscroll-behavior: contain;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 800;
 
   .dialogBackdrop {
     background: var(--overlay-color);
@@ -41,12 +39,10 @@
 
 .dialogBackdrop {
   bottom: 0;
-  height: 100%;
   left: 0;
   position: fixed;
   right: 0;
   top: 0;
-  width: 100%;
 }
 
 .dialog {
